# openopus

./: .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/openopus/: __init__.py
src/openopus/nn/: __init__.py  kernel.py  lstm.py
tests/: test_kernel.py  test_lstm.py
